// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - CustomRadioButton LabelText renders correctly 1`] = `
<label
  className="sc-bdVaJa eJJIWN"
/>
`;

exports[`COMPONENT - CustomRadioButton LabelText renders correctly with icon 1`] = `
<label
  className="sc-bdVaJa crARkb"
/>
`;
